Fixed card__footer align to bottom

--- a/00_psd2web/00-01_primeone/#src/styles/style.scss
+++ b/00_psd2web/00-01_primeone/#src/styles/style.scss
@@ -294,8 +294,10 @@ h6 {
 	margin: 0 auto 75px auto;
 	display: flex;
 	justify-content: space-between;
-	// .products__column
+	height: 100%;
 	&__column {
+		max-width: 225px;
+		position: relative;
 	}
 }
 .card {
@@ -320,7 +322,7 @@ h6 {
 
 	// .card__title
 	&__title {
-		width: 121px;
+		max-width: 121px;
 		color: #000000;
 		font-family: 'Akzidenz Grotesk BQ - Bd Cnd';
 		font-size: 25px;
@@ -344,6 +346,8 @@ h6 {
 	// .card__footer
 	&__footer {
 		margin: 32px 0 0 0;
+		position: absolute;
+		bottom: -132px;
 	}
 }
 .card-actions {
@@ -355,7 +359,6 @@ h6 {
 		font-family: 'Bebas';
 		font-size: 15px;
 		font-weight: 400;
-		line-height: 25px;
 		text-transform: uppercase;
 		letter-spacing: 1.5px;
 		height: 50px;
